# CMakeList.txt : CMake project for Spaghetti-Driven-BlipBlop-Contraption, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Spaghetti-Driven-BlipBlop-Contraption "Spaghetti-Driven-BlipBlop-Contraption.cpp" "Spaghetti-Driven-BlipBlop-Contraption.h")

# TODO: Add tests and install targets if needed.
